<resources>
    <string name="app_name">News Timez</string>
    <string name="save_button">save_button</string>
    <string name="news_feed">Top Stories</string>
    <string name="saved_news_item">Saved News</string>
    <string name="search_news_item">Search News</string>
    <string name="news_item_image">news_item_image</string>
    <string name="news_item_source">SOURCE</string>
    <string name="news_item_title">TITLE</string>
    <string name="news_item_description">DESCRIPTION</string>
    <string name="news_item_published_at">PUBLISHED AT</string>
    <string name="search_articles_hint_text">Inflation prices…</string>
    <string name="article_text">Article</string>
    <string name="error_title">Error</string>
    <string name="error_message">That\'s awkward. Please check your internet connection</string>
    <string name="news">News</string>
    <string name="feed">Feed</string>
</resources>