<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/cardElevation_7dp"
    app:cardCornerRadius="@dimen/cardCornerRadius_7dp"
    android:layout_height="wrap_content">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingBottom="10dp">
       <ImageView
           android:id="@+id/ivArticleImage"
           android:layout_width="match_parent"
           android:layout_height="@dimen/imageViewHeight_220dp"
           android:contentDescription="@string/news_item_image"
           android:scaleType="centerCrop"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="7dp"
           android:paddingHorizontal="10dp"
           android:id="@+id/src_pub_container"
           app:layout_constraintTop_toBottomOf="@id/ivArticleImage">

           <TextView
               android:id="@+id/tvPublishedAt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/news_item_published_at"
               android:textColor="@color/gray"
               android:textSize="13sp"
               android:fontFamily="@font/manrope_regular"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/tvSource"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/news_item_source"
               android:textColor="@color/gray"
               android:textSize="13sp"
               android:fontFamily="@font/manrope_regular"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <TextView
           android:id="@+id/tvTitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="7dp"
           android:ellipsize="end"
           android:fontFamily="@font/manrope_bold"
           android:maxLines="2"
           android:text="@string/news_item_title"
           android:textColor="@android:color/black"
           android:textSize="20sp"
           android:textStyle="bold"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/src_pub_container" />

       <TextView
           android:id="@+id/tvDescription"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginTop="5dp"
           android:ellipsize="end"
           android:maxLines="2"
           android:text="@string/news_item_description"
           android:textSize="15sp"
           android:fontFamily="@font/manrope_regular"
           android:textColor="@color/gray"
           app:layout_constraintTop_toBottomOf="@id/tvTitle" />
   </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>